--- a/about-supporting-older-perl5-releases.pod
+++ b/about-supporting-older-perl5-releases.pod
@@ -3,7 +3,7 @@
 =head2 TL;DR Summary
 
 Due to several reasons, I am setting a minimal version of perl5 - 5.12.0
-or even higher - for some of my L<CPAN,https://en.wikipedia.org/wiki/CPAN>
+or even higher - for some of my L<CPAN|https://en.wikipedia.org/wiki/CPAN>
 distributions. You should either upgrade your perl5, or alternatively pay
 me to support older releases of perl5.
 
@@ -41,11 +41,11 @@ Or patch the reverse dependencies to use something else.
 
 =over 4
 
-=item * L<GitHub discussion,https://github.com/shlomif/perl-XML-SemanticDiff/issues/3>
+=item * L<GitHub discussion|https://github.com/shlomif/perl-XML-SemanticDiff/issues/3>
 
-=item * L<module-authors discussion,https://www.nntp.perl.org/group/perl.module-authors/2018/08/msg10944.html>
+=item * L<module-authors discussion|https://www.nntp.perl.org/group/perl.module-authors/2018/08/msg10944.html>
 
-=item * L<What does "if it ain't broke, don't fix it" really mean?,https://szabgab.com/what-does--if-it-aint-broke-dont-fix-it--really-mean.html>
+=item * L<What does "if it ain't broke, don't fix it" really mean?|https://szabgab.com/what-does--if-it-aint-broke-dont-fix-it--really-mean.html>
 
 =back
 
