--- a/about-supporting-older-perl5-releases.pod
+++ b/about-supporting-older-perl5-releases.pod
@@ -7,6 +7,16 @@ or even higher - for some of my L<CPAN|https://en.wikipedia.org/wiki/CPAN>
 distributions. You should either upgrade your perl5, or alternatively pay
 me to support older releases of perl5.
 
+=head2 Motivation
+
+I hesitate to lower the supported version of perl because that may increase the maintenance burden (CPAN Testers / etc.). You should upgrade to a newer version of perl because 5.10 is very old (last released in August 2009 - L<http://use.perl.org/use.perl.org/articles/09/08/25/0556226.shtml> ), is unmaintained and possibly broken and there's already perl 5.28.x . There's some discussion of dedicating time to doing such transitions and upgrades here - L<https://szabgab.com/what-does--if-it-aint-broke-dont-fix-it--really-mean.html> .
+
+If you cannot afford to upgrade the system's perl, you can try using L<perlbrew|https://perlbrew.pl/> or similar tools. Often, using the system perl directly is not recommended anyway.
+
+I hesitate to lower the requirement to 5.010, and then to 5.8 , 5.6 and finally down to 5.000. 5.012 is already generous enough. Someone told me that Linus Torvalds once said that his main responsibility as the main maintainer of the Linux kernel is to "Say 'No.'". This is one case where I tend to wish to do exactly that.
+
+I added a "use 5.012;" statement so L<Dist::Zilla> can make the Kwalitee / CPANTS (see L<https://cpants.cpanauthors.org/> ) metrics better (minimum perl version). Reducing it further would have meant that I'd have to: 1. Risk test failures for 5.8 and 5.10. 2. Risk having to support end users with these ancient perl versions. All this is something I don't want to do as a precaution. Also see the joke thread at L<http://www.shlomifish.org/humour/fortunes/tinic.html#hamakor-discs-mozilla-1.1-1> . You really should upgrade to a newer perl5.
+
 =head2 The payment terms
 
 I request a payment of 100 USD per year per distribution, to make me support
