--- a/about-supporting-older-perl5-releases.pod
+++ b/about-supporting-older-perl5-releases.pod
@@ -13,11 +13,13 @@ I hesitate to lower the supported version of perl because that may increase the 
 
 If you cannot afford to upgrade the system's perl, you can try using L<perlbrew|https://perlbrew.pl/> or similar tools. Often, using the system perl directly is not recommended anyway.
 
-I hesitate to lower the requirement to 5.010, and then to 5.8 , 5.6 and finally down to 5.000. 5.012 is already generous enough. Someone told me that Linus Torvalds once said that his main responsibility as the main maintainer of the Linux kernel is to "Say 'No.'". This is one case where I tend to wish to do exactly that.
+I hesitate to lower the requirement to 5.010, and then to 5.8 or possibly even lower. 5.012 is already generous enough. Someone told me that Linus Torvalds once said that his main responsibility as the chief maintainer of the Linux kernel is to "Say 'No.'". This is one case where I tend to wish to do exactly that.
 
-I added a "use 5.012;" statement so L<Dist::Zilla> can make the Kwalitee / CPANTS (see L<https://cpants.cpanauthors.org/> ) metrics better (minimum perl version). Reducing it further would have meant that I'd have to: 1. Risk test failures for 5.8 and 5.10. 2. Risk having to support end users with these ancient perl versions. All this is something I don't want to do as a precaution. Also see the joke thread at L<http://www.shlomifish.org/humour/fortunes/tinic.html#hamakor-discs-mozilla-1.1-1> . You really should upgrade to a newer perl5.
+I added a "use 5.012;" statement so L<Dist::Zilla> can make the Kwalitee / CPANTS (see L<https://cpants.cpanauthors.org/> ) metrics better (minimum perl version). Reducing it further would have meant that I'd have to: 1. Risk test failures for 5.8 and 5.10. 2. Risk having to support end users with these old perl versions. All this is something I don't want to do as a precaution. Also see the joke thread at L<http://www.shlomifish.org/humour/fortunes/tinic.html#hamakor-discs-mozilla-1.1-1> . You really should upgrade to a newer perl5.
 
 To quote L<Jenna Marbles|https://www.youtube.com/user/JennaMarbles> in this video - L<https://www.youtube.com/watch?v=ROZjaxT_0Hw>, which I found really funny and has some NSFW monologue, but SFW imagery: "Fuck that!".
+
+=head3 Supporting Organisations With Strict Policies
 
 Paul Bennett writes in L<https://www.mail-archive.com/module-authors@perl.org/msg10638.html> :
 
@@ -53,7 +55,7 @@ or I may not.
 Note that you may opt to be credited as supporters of the distribution, in its
 documentation.
 
-=head2 Alternatives
+=head2 Alternative Options To Paying
 
 =over 4
 
