--- a/about-supporting-older-perl5-releases.pod
+++ b/about-supporting-older-perl5-releases.pod
@@ -1,3 +1,5 @@
+=encoding utf8
+
 =head1 About Supporting Older Releases of perl5 For CPAN Distributions
 
 =head2 TL;DR Summary
@@ -13,7 +15,7 @@ I hesitate to lower the supported version of perl because that may increase the 
 
 If you cannot afford to upgrade the system's perl, you can try using L<perlbrew|https://perlbrew.pl/> or similar tools. Often, using the system perl directly is not recommended anyway.
 
-I hesitate to lower the requirement to 5.010, and then to 5.8 or possibly even lower. 5.012 is already generous enough. Someone told me that Linus Torvalds once said that his main responsibility as the chief maintainer of the Linux kernel is to "Say 'No.'". This is one case where I tend to wish to do exactly that.
+I hesitate to lower the requirement to 5.010, and then to 5.8 or possibly even lower. 5.012 is already generous enough. Someone told me that Linus Torvalds once said that his main responsibility as the chief maintainer of the Linux kernel project is to "Say 'No.'". This is one case where I tend to wish to do exactly that.
 
 I added a "use 5.012;" statement so L<Dist::Zilla> can make the Kwalitee / CPANTS (see L<https://cpants.cpanauthors.org/> ) metrics better (minimum perl version). Reducing it further would have meant that I'd have to: 1. Risk test failures for 5.8 and 5.10. 2. Risk having to support end users with these old perl versions. All this is something I don't want to do as a precaution. Also see the joke thread at L<http://www.shlomifish.org/humour/fortunes/tinic.html#hamakor-discs-mozilla-1.1-1> . You really should upgrade to a newer perl5.
 
@@ -44,6 +46,25 @@ Well, I don't have a lot of empathy for organisations with non-productive
 policies like that, but I suppose that if they really need that, then they can
 afford to pay me for my time and trouble, or to implement any of the other
 possible solutions.
+
+=head3 Respecting the perl5-porters
+
+I believe that objecting to requiring a minimum version of perl5 above 5.10.x
+is disrespectful of the work of the
+L<perl5-porters|https://lists.perl.org/list/perl5-porters.html> who actively
+work to release new versions of the perl5 runtime with bug fixes (including
+for security bugs), new features, new automated tests, new optimisations,
+and other improvements, all while breaking as little backward compatibility as
+possible and while handling the human part of the process, such as handling
+bug reports, complaints, and discussion. Since the release of perl 5.12.0, a
+new stable version of perl5 was released yearly every May or close to it.
+
+They deserve a lot of appreciation, and I hereby admit that I love them all.
+♥♥♥! Thanks!
+
+Many perl5 and CPAN contributors went to great effort to create open source
+solutions such as perlbrew or L<local::lib> to facilitate using an up-to-date
+version of perl5, so there is little excuse to avoid updating.
 
 =head2 The payment terms
 
