--- a/about-supporting-older-perl5-releases.pod
+++ b/about-supporting-older-perl5-releases.pod
@@ -5,9 +5,9 @@
 =head2 TL;DR Summary
 
 Due to several reasons, I am setting a minimal version of perl5 - 5.12.0
-or even higher - for some of my L<CPAN|https://en.wikipedia.org/wiki/CPAN>
-distributions. You should either upgrade your perl5, or alternatively pay
-me to support older releases of perl5.
+or even higher - for B<some> of my L<CPAN|https://en.wikipedia.org/wiki/CPAN>
+distributions (not all). You should either upgrade your perl5, or
+alternatively pay me to support older releases of perl5.
 
 =head2 Motivation
 
@@ -15,7 +15,7 @@ I hesitate to lower the supported version of perl because that may increase the 
 
 If you cannot afford to upgrade the system's perl, you can try using L<perlbrew|https://perlbrew.pl/> or similar tools. Often, using the system perl directly is not recommended anyway.
 
-I hesitate to lower the requirement to 5.010, and then to 5.8 or possibly even lower. 5.012 is already generous enough. Someone told me that Linus Torvalds once said that his main responsibility as the chief maintainer of the Linux kernel project is to "Say 'No.'". This is one case where I tend to wish to do exactly that.
+I hesitate to lower the requirement to 5.010, and then to 5.8 or possibly even lower. 5.012 is already generous enough. Someone told me that L<Linus Torvalds|https://en.wikipedia.org/wiki/Linus_Torvalds> once said that his main responsibility as the chief maintainer of the Linux kernel project is to "Say 'No.'". This is one case where I wish to do exactly that.
 
 I added a "use 5.012;" statement so L<Dist::Zilla> can make the Kwalitee / CPANTS (see L<https://cpants.cpanauthors.org/> ) metrics better (minimum perl version). Reducing it further would have meant that I'd have to: 1. Risk test failures for 5.8 and 5.10. 2. Risk having to support end users with these old perl versions. All this is something I don't want to do as a precaution. Also see the joke thread at L<http://www.shlomifish.org/humour/fortunes/tinic.html#hamakor-discs-mozilla-1.1-1> . You really should upgrade to a newer perl5.
 
@@ -23,7 +23,7 @@ To quote L<Jenna Marbles|https://www.youtube.com/user/JennaMarbles> in this vide
 
 =head3 Supporting Organisations With Strict Policies
 
-Paul Bennett writes in L<https://www.mail-archive.com/module-authors@perl.org/msg10638.html> :
+L<Paul Bennett|https://metacpan.org/author/PWBENNETT> writes in L<https://www.mail-archive.com/module-authors@perl.org/msg10638.html> :
 
     I have faced this question head-on with some of my modules.
 
