--- a/about-supporting-older-perl5-releases.pod
+++ b/about-supporting-older-perl5-releases.pod
@@ -73,7 +73,7 @@ old perl5 releases, then please implement one of the suggestions below.
 =head2 The payment terms
 
 I request a payment of 100 USD per year per distribution, to make me support
-perl-5.8.x-or-above, not just for you - for everybody. At the end of the year,
+perl-5.8.x-or-above — not just for you — for everybody. At the end of the year,
 if I don't get a term renewal, I may continue to support the older versions,
 or I may not.
 
@@ -114,8 +114,14 @@ Or patch the reverse dependencies to use something else.
 
 =head2 Contact
 
-L<https://metacpan.org/author/SHLOMIF> ,
-L<http://www.shlomifish.org/me/contact-me/> ,
-L<http://www.shlomifish.org/meta/donate/> .
+=over 4
+
+=item * L<https://metacpan.org/author/SHLOMIF>
+
+=item * L<http://www.shlomifish.org/me/contact-me/>
+
+=item * L<http://www.shlomifish.org/meta/donate/>
+
+=back
 
 =cut
