--- a/old-README.asciidoc
+++ b/old-README.asciidoc
@@ -9,11 +9,11 @@ alternatively pay me to support older releases of perl5.
 
 === Motivation
 
-I hesitate to lower the supported version of perl because that may increase the maintenance burden (CPAN Testers / etc.). You should upgrade to a newer version of perl because 5.10 is very old (last released in August 2009 - http://use.perl.org/use.perl.org/articles/09/08/25/0556226.shtml ), is unmaintained and possibly broken and there's already perl 5.28.x . There's some discussion of dedicating time to doing such transitions and upgrades here - https://szabgab.com/what-does--if-it-aint-broke-dont-fix-it--really-mean.html .
+I hesitate to lower the supported version of perl because that may increase the maintenance burden (CPAN Testers / etc.). You should upgrade to a newer version of perl because 5.10 is very old (last released in August 2009 - http://use.perl.org/use.perl.org/articles/09/08/25/0556226.shtml ), is unmaintained and possibly broken and there's already perl 5.28.x . There's some discussion of dedicating time to doing such transitions and upgrades here - https://www.shlomifish.org/philosophy/psychology/changing-the-seldon-plan/ .
 
 If you cannot afford to upgrade the system's perl, you can try using https://perlbrew.pl/ [perlbrew] or similar tools. Often, using the system perl directly is not recommended anyway.
 
-I hesitate to lower the requirement to 5.010, and then to 5.8 or possibly even lower. 5.012 is already generous enough. Someone told me that https://en.wikipedia.org/wiki/Linus_Torvalds [Linus Torvalds] once said that his main responsibility as the chief maintainer of the Linux kernel project is to "Say 'No.'". This is one case where I wish to do exactly that.
+I hesitate to lower the requirement to 5.10, and then to 5.8 or possibly even lower. 5.12 is already generous enough. Someone told me that https://en.wikipedia.org/wiki/Linus_Torvalds [Linus Torvalds] once said that his main responsibility as the chief maintainer of the Linux kernel project is to "Say 'No.'". This is one case where I wish to do exactly that.
 
 I added a "use 5.012;" statement so << Dist::Zilla >> can make the Kwalitee / CPANTS (see https://cpants.cpanauthors.org/ ) metrics better (minimum perl version). Reducing it further would have meant that I'd have to: 1. Risk test failures for 5.8 and 5.10. 2. Risk having to support end users with these old perl versions. All this is something I don't want to do as a precaution. Also see the joke thread at http://www.shlomifish.org/humour/fortunes/tinic.html#hamakor-discs-mozilla-1.1-1 . You really should upgrade to a newer perl5.
 
@@ -40,7 +40,7 @@ https://metacpan.org/author/PWBENNETT [Paul Bennett] writes in https://www.mail-
     every major version $v of that module. This is in case anyone has a module
     (on or off CPAN) that has some kind of version locking in their deps.
 
-Well, I don't have a lot of empathy for organisations with non-productive
+Well, I don't have a lot of sympathy for organisations with non-productive
 policies like that, but I suppose that if they really need that, then they can
 afford to pay me for my time and trouble, or to implement any of the other
 possible solutions.
@@ -100,7 +100,7 @@ Or patch the reverse dependencies to use something else.
 
 * * L<module-authors discussion|https://www.nntp.perl.org/group/perl.module-authors/2018/08/msg10944.html>
 
-* * L<What does "if it ain't broke, don't fix it" really mean?|https://szabgab.com/what-does--if-it-aint-broke-dont-fix-it--really-mean.html>
+* * L<What does "if it ain't broke, don't fix it" really mean?|https://www.shlomifish.org/philosophy/psychology/changing-the-seldon-plan/>
 
 === Contact
 
